[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ui/fonts/montserrat_eb_48.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_16.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/ui/match_result/result.gd" type="Script" id=3]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_32.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/ui/icon/menu.png" type="Texture" id=5]
[ext_resource path="res://addons/SafeArea/SafeArea.tscn" type="PackedScene" id=6]

[node name="result" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="SafeArea" parent="." instance=ExtResource( 6 )]
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SafeArea"]
margin_right = 600.0
margin_bottom = 89.0
mouse_filter = 2
size_flags_vertical = 0

[node name="MarginContainer2" type="MarginContainer" parent="SafeArea/VBoxContainer"]
margin_right = 600.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 5 )
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SafeArea/VBoxContainer"]
margin_top = 9.0
margin_right = 600.0
margin_bottom = 89.0
alignment = 2

[node name="main_menu" type="Button" parent="SafeArea/VBoxContainer/HBoxContainer"]
margin_left = 511.0
margin_right = 591.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
size_flags_vertical = 0
icon = ExtResource( 5 )
expand_icon = true

[node name="MarginContainer2" type="MarginContainer" parent="SafeArea/VBoxContainer/HBoxContainer"]
margin_left = 595.0
margin_right = 600.0
margin_bottom = 80.0
rect_min_size = Vector2( 5, 0 )
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -209.0
margin_top = -178.5
margin_right = 209.0
margin_bottom = 178.5

[node name="ColorRect2" type="ColorRect" parent="MarginContainer"]
margin_right = 418.0
margin_bottom = 357.0
color = Color( 0.117647, 0.117647, 0.117647, 0.917647 )

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
margin_right = 418.0
margin_bottom = 357.0
alignment = 1

[node name="MarginContainer8" type="MarginContainer" parent="MarginContainer/VBoxContainer2"]
margin_right = 418.0
margin_bottom = 20.0
rect_min_size = Vector2( 80, 20 )

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer2"]
margin_top = 24.0
margin_right = 418.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 1 )
text = "Victory"
align = 1
valign = 1

[node name="MarginContainer7" type="MarginContainer" parent="MarginContainer/VBoxContainer2"]
margin_top = 88.0
margin_right = 418.0
margin_bottom = 118.0
rect_min_size = Vector2( 80, 30 )

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
margin_top = 122.0
margin_right = 418.0
margin_bottom = 205.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer2/HBoxContainer2"]
margin_right = 40.0
margin_bottom = 83.0
rect_min_size = Vector2( 40, 0 )

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 44.0
margin_right = 374.0
margin_bottom = 83.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "All Enemy Town Center Destroyed"
align = 1
valign = 1
autowrap = true

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 378.0
margin_right = 418.0
margin_bottom = 83.0
rect_min_size = Vector2( 40, 0 )

[node name="MarginContainer6" type="MarginContainer" parent="MarginContainer/VBoxContainer2"]
margin_top = 209.0
margin_right = 418.0
margin_bottom = 249.0
rect_min_size = Vector2( 80, 40 )

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
margin_top = 253.0
margin_right = 418.0
margin_bottom = 333.0
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer2/HBoxContainer3"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )

[node name="continue" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer3"]
margin_left = 84.0
margin_right = 334.0
margin_bottom = 80.0
rect_min_size = Vector2( 250, 80 )
custom_fonts/font = ExtResource( 2 )
text = "Continue"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer2/HBoxContainer3"]
margin_left = 338.0
margin_right = 418.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 0 )

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer2"]
margin_top = 337.0
margin_right = 418.0
margin_bottom = 357.0
rect_min_size = Vector2( 0, 20 )

[connection signal="pressed" from="SafeArea/VBoxContainer/HBoxContainer/main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/HBoxContainer3/continue" to="." method="_on_continue_pressed"]
